@@ -1,3 +1,5 @@
+3928.	[test]		Improve rndc system test. [RT #36898]
+
 3925.	[bug]		DS lookup of RFC 1918 empty zones failed. [RT #36917]
 
 3924.	[bug]		Improve 'rndc addzone' error reporting. [RT #35187]
